--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "magic-sdk": "^16.1.0",
     "moralis-v1": "^1.12.0",
     "next": "13.4.3",
     "react": "18.2.0",
