working certificate generator added

--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "dom-to-image": "^2.6.0",
     "downloadjs": "^1.4.7",
-    "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "magic-sdk": "^16.1.0",
     "moralis-v1": "^1.12.0",
     "next": "13.4.3",
