--- a/package.json
+++ b/package.json
@@ -18,10 +18,19 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-moralis": "^1.3.5",
-    "web3uikit": "^0.0.133"
-  },
-  "devDependencies": {
+    "web3uikit": "^0.0.133",
     "dotenv": "^16.0.0",
     "nft.storage": "^6.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "20.9.0",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
+    "autoprefixer": "10.4.16",
+    "eslint": "8.53.0",
+    "eslint-config-next": "14.0.1",
+    "postcss": "8.4.31",
+    "tailwindcss": "3.3.5",
+    "typescript": "5.2.2"
   }
 }
