--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
   },
   "dependencies": {
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.0",
     "downloadjs": "^1.4.7",
     "html2canvas": "^1.4.1",
     "magic-sdk": "^16.1.0",
     "moralis-v1": "^1.12.0",
     "next": "13.4.3",
+    "nft.storage": "^6.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-moralis": "^1.3.5",
-    "web3uikit": "^0.0.133",
-    "dotenv": "^16.0.0",
-    "nft.storage": "^6.0.1"
+    "web3uikit": "^0.0.133"
   },
   "devDependencies": {
+    "@types/downloadjs": "^1.4.6",
     "@types/node": "20.9.0",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
