--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ethers": "^5.6.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "downloadjs": "^1.4.7",
