--- a/package.json
+++ b/package.json
@@ -9,29 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "ethers": "^5.6.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "downloadjs": "^1.4.7",
+    "ethers": "^5.6.0",
     "html2canvas": "^1.4.1",
     "magic-sdk": "^16.1.0",
     "moralis-v1": "^1.12.0",
-    "next": "13.4.3",
+    "next": "^14.0.2",
     "nft.storage": "^6.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18",
+    "react-dom": "^18",
     "react-moralis": "^1.3.5",
     "web3uikit": "^0.0.133"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.1",
     "@types/downloadjs": "^1.4.6",
-    "@types/node": "20.9.0",
-    "@types/react": "18.2.37",
-    "@types/react-dom": "18.2.15",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
-    "eslint": "8.53.0",
-    "eslint-config-next": "14.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "13.4.19",
     "postcss": "8.4.31",
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2"
