--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-moralis": "^1.3.5",
-    "web3uikit": "^0.0.133"
+    "web3uikit": "^0.0.133",
+    "clsx": "^1.2.1",
+    "framer-motion": "^10.16.4",
+    "react-icons": "^4.10.1",
+    "react-typed": "^1.2.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.1",
