--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^1.2.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "downloadjs": "^1.4.7",
     "ethers": "^5.6.0",
+    "framer-motion": "^10.16.4",
     "html2canvas": "^1.4.1",
     "magic-sdk": "^16.1.0",
     "moralis-v1": "^1.12.0",
@@ -20,12 +22,11 @@
     "nft.storage": "^6.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-moralis": "^1.3.5",
-    "web3uikit": "^0.0.133",
-    "clsx": "^1.2.1",
-    "framer-motion": "^10.16.4",
     "react-icons": "^4.10.1",
-    "react-typed": "^1.2.0"
+    "react-moralis": "^1.3.5",
+    "react-parallax-tilt": "^1.7.174",
+    "react-typed": "^1.2.0",
+    "web3uikit": "^0.0.133"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.1",
