--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.10.1",
     "react-moralis": "^1.3.5",
     "react-parallax-tilt": "^1.7.174",
+    "react-intersection-observer": "^9.5.2",
     "react-typed": "^1.2.0",
     "web3uikit": "^0.0.133"
   },
