--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@thirdweb-dev/react": "^4.1.16",
     "clsx": "^1.2.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
@@ -23,9 +24,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.10.1",
+    "react-intersection-observer": "^9.5.2",
     "react-moralis": "^1.3.5",
     "react-parallax-tilt": "^1.7.174",
-    "react-intersection-observer": "^9.5.2",
     "react-typed": "^1.2.0",
     "web3uikit": "^0.0.133"
   },
