--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@thirdweb-dev/react": "^4.1.16",
-    "react-hot-toast": "^2.4.1",
     "clsx": "^1.2.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
@@ -24,12 +23,12 @@
     "nft.storage": "^6.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
     "react-moralis": "^1.3.5",
     "react-parallax-tilt": "^1.7.174",
-    "react-typed": "^1.2.0",
-    "web3uikit": "^0.0.133"
+    "react-typed": "^1.2.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.1",
