--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
 NFT_STORAGE_KEY=***********************************************************
+CLIENT_ID=***********************************************************
